tests/frontend_tests/error_missing_quote.c
int main() {
  // error: missing terminating quote
  "hello
}
